--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
       <version>1.5.2.Final</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.1.2.Final</version>
+    </dependency>
 
   </dependencies>
   <build>
